# audio-transcriber

./: .env.template  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
.beads/: audio-transcriber.db  issues.jsonl
instructions/: 2025-09-07-session-limit-fix-bugs.txt  2025-09-27-command-messageinit-is-analyzing-your-codebase.txt  2025-09-27-tasks-todo.md  2025-10-15-agentic-refactor-analysis.md  VAD_Comparison_README.md  plan.md  specification.md  tasks-todo.md  tasks.md
instructions/COMPLETED/: 2025-09-15-plan.md  2025-09-15-v1.0-project-specification.md  2025-10-17-HANDOFF.md
parakeet_bridge/: Package.swift
parakeet_bridge/Sources/ParakeetTranscriber/: main.swift
prompts/: cleanup_transcript.txt  merge_segments.txt  spell-corrections-gpt-5.txt  spell-corrections-v2.txt  spell-corrections.txt
src/: __init__.py  config.py  ffmpeg_preprocess.py  gpt_cleanup.py  gpt_merge.py  main.py  parakeet_transcribe.py  senko_diarizer.py  transcribe.py  vad_timestamp.py  whisper_transcribe.py
src/transcription/: __init__.py  parakeet_strategy.py  strategy.py  whisper_strategy.py
tests/: analyze_transcript_changes.py  test_truncation.py  transcript_compare.py
